--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ["9.10.1", "9.8.4", "9.6.6"]
+        ghc: ["9.12.1", "9.10.1", "9.8.4", "9.6.6"]
         os: [ubuntu-latest]
 
     env:
